descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.


----------------------------------------------------------------------
--- 2014-XX-XX  Release 7.26.XX                                    ---
----------------------------------------------------------------------

* added icv tool for image format conversion - Cliff Yapp
* ported 'burst' tool (batch mode only) to Windows - Cliff Yapp
* removed mged pl command, use plot command instead - Sean Morrison
* improved datum wireframes (yellow) and fixed arrowheads - Cliff Yapp
* added initial manual page for 'burst' ray dispatch tool - Cliff Yapp
* added -M draw cmd option to skip subtraction solids - Cliff Yapp
* added -L draw cmd option to draw bboxes for large bots - Cliff Yapp
* minor rtwizard graphical user interface reorganization - Cliff Yapp
* ported 'brlman' manual page viewer with GUI to Windows - Cliff Yapp
* added gdiff -h help command-line option - Cliff Yapp
* added facetize -m marching cubes option - Erik Greenwald
* removed -I interactive option from rt/rtedge/remrt - Sean Morrison
* improved pix-bw intensity averaging to closest integer - Cliff Yapp
* removed pix-bw3 & bw3-pix tools, see pix-bw & bw-pix - Cliff Yapp
* fixed pix-ppm to write out all image data - Sean Morrision
* added new algorithm to bot_decimate (via -f option) - Jon Engbert
* fixed benchmark bug running from paths with spaces - Sean Morrison
* removed support for RLE v1 and v2 ('orle') image format - Cliff Yapp
* fixed datum type 'in' command unit conversion bug - Cliff Yapp
* fixed rpatch / patch-g line handling on Windows - Daniel Roßberg
* added 'arb8' surface area value to analyze command - Kalpit Thakkar
* added 'part' centroid reporting to analyze command - Brad Hollister
* added new pixcrop utility for cropping pix images - Carl Moore
* preliminary OpenCL-accelerated coherent ray tracing pipeline
	- Jon Engbert, Vasco Costa